Settings now has emergency contact boxes

--- a/care-corner-mobile/app/src/main/res/layout/settings.xml
+++ b/care-corner-mobile/app/src/main/res/layout/settings.xml
@@ -11,9 +11,134 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Settings"
+        android:text="@string/settings"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        app:layout_constraintBottom_toTopOf="@+id/EmergencyContactName1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnSaveContacts"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="95dp"
+        android:layout_marginLeft="95dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="98dp"
+        android:layout_marginRight="98dp"
+        android:layout_marginBottom="248dp"
+        android:text="@string/save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/EmergencyContactNumber3" />
+
+    <EditText
+        android:id="@+id/EmergencyContactNumber2"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginRight="71dp"
+        android:layout_marginBottom="5dp"
+        android:hint="@string/emergency_contact_number"
+        android:importantForAutofill="no"
+        android:inputType="none|phone"
+        app:layout_constraintBottom_toTopOf="@+id/EmergencyContactName3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/EmergencyContactName2" />
+
+    <EditText
+        android:id="@+id/EmergencyContactName3"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginRight="71dp"
+        android:layout_marginBottom="5dp"
+        android:hint="@string/emergency_contact_name"
+        android:importantForAutofill="no"
+        android:inputType="none|textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/EmergencyContactNumber3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/EmergencyContactNumber2" />
+
+    <EditText
+        android:id="@+id/EmergencyContactName2"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginRight="71dp"
+        android:layout_marginBottom="5dp"
+        android:hint="@string/emergency_contact_name"
+        android:importantForAutofill="no"
+        android:inputType="none|textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/EmergencyContactNumber2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/EmergencyContactNumber1" />
+
+    <EditText
+        android:id="@+id/EmergencyContactNumber1"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginRight="71dp"
+        android:layout_marginBottom="15dp"
+        android:hint="@string/emergency_contact_number"
+        android:importantForAutofill="no"
+        android:inputType="none|number|phone"
+        app:layout_constraintBottom_toTopOf="@+id/EmergencyContactName2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/EmergencyContactName1" />
+
+    <EditText
+        android:id="@+id/EmergencyContactName1"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginRight="71dp"
+        android:layout_marginBottom="5dp"
+        android:hint="@string/emergency_contact_name"
+        android:importantForAutofill="no"
+        android:inputType="none|textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/EmergencyContactNumber1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Settings" />
+
+    <EditText
+        android:id="@+id/EmergencyContactNumber3"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginRight="71dp"
+        android:layout_marginBottom="5dp"
+        android:hint="@string/emergency_contact_number"
+        android:importantForAutofill="no"
+        android:inputType="phone"
+        app:layout_constraintBottom_toTopOf="@+id/btnSaveContacts"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/EmergencyContactName3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
