--- a/care-corner-mobile/app/src/main/res/layout/journal_menu_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/journal_menu_activity.xml
@@ -23,24 +23,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btnHome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="61dp"
-        android:layout_marginLeft="61dp"
-        android:layout_marginTop="37dp"
-        android:layout_marginEnd="209dp"
-        android:layout_marginRight="209dp"
-        android:background="@android:color/white"
-        android:fontFamily="@font/lato"
-        android:text="@string/return_home"
-        android:textColor="@android:color/black"
-        app:backgroundTint="#FCFDFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_journal" />
-
+    <!--
     <Button
         android:id="@+id/btnCreate"
         android:layout_width="wrap_content"
@@ -56,7 +39,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/btnHome"
         app:layout_constraintTop_toBottomOf="@+id/my_journal" />
-<!--
+
     <Button
         android:id="@+id/btnDelete"
         android:layout_width="wrap_content"
@@ -90,12 +73,25 @@
         -->
 
     <Button
+        android:id="@+id/btnHome"
+        android:layout_width="161dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="112dp"
+        android:background="@android:color/white"
+        android:fontFamily="@font/lato"
+        android:text="@string/return_home"
+        android:textColor="@android:color/black"
+        app:backgroundTint="#FCFDFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/my_journal" />
+
+    <Button
         android:id="@+id/btnView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="136dp"
-        android:layout_marginLeft="136dp"
-        android:layout_marginBottom="340dp"
+        android:layout_width="158dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginBottom="380dp"
         android:fontFamily="@font/lato"
         android:text="@string/view_recycler"
         app:layout_constraintBottom_toBottomOf="parent"
