--- a/care-corner-mobile/app/src/main/res/layout/reporting_reader_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/reporting_reader_activity.xml
@@ -9,13 +9,11 @@
 
     <TextView
         android:id="@+id/title2"
-        android:layout_width="269dp"
-        android:layout_height="55dp"
+        android:layout_width="319dp"
+        android:layout_height="131dp"
         android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
         android:layout_marginTop="72dp"
         android:layout_marginEnd="70dp"
-        android:layout_marginRight="70dp"
         android:layout_marginBottom="20dp"
         android:gravity="center"
         android:text="@string/title"
@@ -23,9 +21,19 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btnEdit"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/reader_incident_report"
+        android:layout_width="283dp"
+        android:layout_height="217dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title2"
+        app:layout_constraintVertical_bias="0.169" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
