added Map to Armed Safe Walk screen

--- a/care-corner-mobile/app/src/main/res/navigation/safe_walk_nav.xml
+++ b/care-corner-mobile/app/src/main/res/navigation/safe_walk_nav.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/safeWalkFragment">
     <fragment
         android:id="@+id/safeWalkFragment"
-        android:name="com.carecorner.SafeWalkFragment"
+        android:name="com.carecorner.SafeWalkMenuFragment"
         android:label="fragment_safe_walk"
-        tools:layout="@layout/fragment_safe_walk" />
+        tools:layout="@layout/safe_walk_menu_fragment" />
 </navigation>
