--- a/care-corner-mobile/app/src/main/res/layout/safe_walk_menu_fragment.xml
+++ b/care-corner-mobile/app/src/main/res/layout/safe_walk_menu_fragment.xml
@@ -5,7 +5,7 @@
     android:id="@+id/safe_walk_fragment_text"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SafeWalkFragment">
+    tools:context=".SafeWalkMenuFragment">
 
     <TextView
         android:id="@+id/safe_call_header_text"
