--- a/care-corner-mobile/app/src/main/res/layout/main_menu_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/main_menu_activity.xml
@@ -38,7 +38,7 @@
         android:id="@+id/btnJournal"
         android:layout_width="72dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:background="#FFFFFF"
         android:contentDescription="@string/journal"
         android:scaleType="fitXY"
@@ -104,7 +104,7 @@
         android:id="@+id/btnResourcesMenu"
         android:layout_width="72dp"
         android:layout_height="70dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
         android:background="#FFFFFF"
         android:contentDescription="@string/resources"
         android:scaleType="fitXY"
@@ -119,7 +119,7 @@
         android:id="@+id/reporting_assistance_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="@font/lato"
         android:text="@string/reporting_assistance"
         android:textSize="18sp"
@@ -132,7 +132,7 @@
         android:id="@+id/btnReportingAssistance"
         android:layout_width="72dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:background="#FFFFFF"
         android:contentDescription="@string/reporting_assistance"
         android:scaleType="fitXY"
@@ -147,20 +147,20 @@
         android:id="@+id/panic_button_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="@font/lato"
         android:text="@string/panic_button"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/btnResourcesMenu"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/btnResourcesMenu"
-        app:layout_constraintTop_toBottomOf="@+id/btnResourcesMenu" />
+        app:layout_constraintEnd_toEndOf="@+id/btnPanicButton"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toStartOf="@+id/btnPanicButton"
+        app:layout_constraintTop_toBottomOf="@+id/btnPanicButton" />
 
     <TextView
         android:id="@+id/resources_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="@font/lato"
         android:text="@string/resources"
         android:textSize="18sp"
@@ -173,44 +173,44 @@
         android:id="@+id/btnSetting"
         android:layout_width="72dp"
         android:layout_height="70dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="16dp"
         android:background="#FFFFFF"
         android:contentDescription="@string/settings"
         android:scaleType="fitXY"
         android:src="@drawable/reporting_icon"
         android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/journal_text"
+        app:layout_constraintEnd_toEndOf="@+id/reporting_assistance_text"
         app:layout_constraintHorizontal_bias="0.583"
-        app:layout_constraintStart_toStartOf="@+id/journal_text"
-        app:layout_constraintTop_toBottomOf="@+id/journal_text" />
+        app:layout_constraintStart_toStartOf="@+id/reporting_assistance_text"
+        app:layout_constraintTop_toBottomOf="@+id/reporting_assistance_text" />
 
     <TextView
         android:id="@+id/settings_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="@font/lato"
         android:text="@string/settings"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/btnReportingAssistance"
+        app:layout_constraintEnd_toEndOf="@+id/btnSetting"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/btnReportingAssistance"
-        app:layout_constraintTop_toBottomOf="@+id/btnReportingAssistance" />
+        app:layout_constraintStart_toStartOf="@+id/btnSetting"
+        app:layout_constraintTop_toBottomOf="@+id/btnSetting" />
 
     <ImageButton
         android:id="@+id/btnPanicButton"
         android:layout_width="72dp"
         android:layout_height="70dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="20dp"
         android:background="#FFFFFF"
         android:contentDescription="@string/panic_button"
         android:scaleType="fitXY"
         android:src="@drawable/resources_icon"
         android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/start_walk_text"
-        app:layout_constraintHorizontal_bias="0.923"
-        app:layout_constraintStart_toStartOf="@+id/start_walk_text"
-        app:layout_constraintTop_toBottomOf="@+id/start_walk_text" />
+        app:layout_constraintEnd_toEndOf="@+id/resources_text"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toStartOf="@+id/resources_text"
+        app:layout_constraintTop_toBottomOf="@+id/resources_text" />
 
     <ImageButton
         android:id="@+id/btnFakePhoneCall"
@@ -218,7 +218,6 @@
         android:layout_height="70dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="200dp"
-        android:layout_marginRight="200dp"
         android:background="#FFFFFF"
         android:contentDescription="@string/fake_call"
         android:scaleType="fitXY"
