--- a/care-corner-mobile/app/src/main/res/layout/journal_menu_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/journal_menu_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#81BBEA"
+    android:background="#FFFFFF"
     tools:context=".JournalMenuActivity">
 
 
@@ -14,8 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:fontFamily="@font/playfair_display_bold"
+        android:fontFamily="sans-serif"
         android:text="@string/my_journal"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,11 +77,8 @@
         android:layout_height="46dp"
         android:layout_marginStart="120dp"
         android:layout_marginTop="112dp"
-        android:background="@android:color/white"
-        android:fontFamily="@font/lato"
+        android:fontFamily="sans-serif"
         android:text="@string/return_home"
-        android:textColor="@android:color/black"
-        app:backgroundTint="#FCFDFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_journal" />
 
@@ -92,7 +88,7 @@
         android:layout_height="58dp"
         android:layout_marginStart="120dp"
         android:layout_marginBottom="380dp"
-        android:fontFamily="@font/lato"
+        android:fontFamily="sans-serif"
         android:text="@string/view_recycler"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
