--- a/care-corner-mobile/app/src/main/res/layout/safe_walk_menu_fragment.xml
+++ b/care-corner-mobile/app/src/main/res/layout/safe_walk_menu_fragment.xml
@@ -90,23 +90,25 @@
         android:id="@+id/btnArrived"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="136dp"
-        android:layout_marginLeft="136dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="20dp"
         android:text="I've Arrived"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnWalking" />
-
-    <Button
-        android:id="@+id/btnWalking"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="136dp"
-        android:layout_marginLeft="136dp"
-        android:layout_marginTop="84dp"
-        android:text="I'm a walkin"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnStartWalk" />
+
+    <Button
+        android:id="@+id/btnPanic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginLeft="160dp"
+        android:layout_marginTop="68dp"
+        android:text="Panic"
+        app:backgroundTint="@color/design_default_color_error"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnArrived" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
