--- a/care-corner-mobile/app/src/main/res/layout/fragment_panic_mode.xml
+++ b/care-corner-mobile/app/src/main/res/layout/fragment_panic_mode.xml
@@ -109,5 +109,15 @@
         app:layout_constraintVertical_bias="0.0"
         tools:text="@string/incident_report" />
 
+    <ImageButton
+        android:id="@+id/panic_home_btn"
+        android:layout_width="74dp"
+        android:layout_height="65dp"
+        android:src="@drawable/home_icon"
+        android:adjustViewBounds="true"
+        android:padding="0dp"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
