--- a/care-corner-mobile/app/src/main/res/layout/safe_walk_menu_fragment.xml
+++ b/care-corner-mobile/app/src/main/res/layout/safe_walk_menu_fragment.xml
@@ -60,9 +60,12 @@
         android:id="@+id/imageView5"
         android:layout_width="68dp"
         android:layout_height="71dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/start_walk_icon"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="6dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textDestination"
