--- a/care-corner-mobile/app/src/main/res/layout/reporting_reader_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/reporting_reader_activity.xml
@@ -1,39 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/title2"
+            android:layout_width="319dp"
+            android:layout_height="131dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/title"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/btnEdit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/title2"
-        android:layout_width="319dp"
-        android:layout_height="131dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginBottom="20dp"
-        android:gravity="center"
-        android:text="@string/title"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnEdit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        <TextView
+            android:id="@+id/reader_incident_report"
+            android:layout_width="match_parent"
+            android:layout_height="288dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title2"
+            app:layout_constraintVertical_bias="0.169" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/reader_incident_report"
-        android:layout_width="283dp"
-        android:layout_height="217dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title2"
-        app:layout_constraintVertical_bias="0.169" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <include layout="@layout/player_sheet" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
