updated icons on Main Menu

--- a/care-corner-mobile/app/src/main/res/layout/main_menu_activity.xml
+++ b/care-corner-mobile/app/src/main/res/layout/main_menu_activity.xml
@@ -177,7 +177,7 @@
         android:background="#FFFFFF"
         android:contentDescription="@string/settings"
         android:scaleType="fitXY"
-        android:src="@drawable/reporting_icon"
+        android:src="@drawable/settings_btn_icon"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="@+id/reporting_assistance_text"
         app:layout_constraintHorizontal_bias="0.583"
@@ -205,7 +205,7 @@
         android:background="#FFFFFF"
         android:contentDescription="@string/panic_button"
         android:scaleType="fitXY"
-        android:src="@drawable/resources_icon"
+        android:src="@drawable/panic_btn_icon"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="@+id/resources_text"
         app:layout_constraintHorizontal_bias="0.51"
